--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h2>Flex Layout</h2>
     <div class="container">
         <div class="sec1">
             <div class="sec">A</div>
